WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
295355
[Form Control Refresh] Author-specified padding on a <button> is being ignored
https://bugs.webkit.org/show_bug.cgi?id=295355
Summary
[Form Control Refresh] Author-specified padding on a <button> is being ignored
Lily Spiniolas
Reported
2025-07-02 13:54:07 PDT
rdar://154889296
Attachments
Add attachment
proposed patch, testcase, etc.
Lily Spiniolas
Comment 1
2025-07-02 14:41:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47507
Lily Spiniolas
Comment 2
2025-07-02 20:18:13 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/53559
EWS
Comment 3
2025-07-03 23:27:34 PDT
Committed
297013@main
(5a4508b65f71): <
https://commits.webkit.org/297013@main
> Reviewed commits have been landed. Closing PR #47507 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug