[Form Control Refresh] Author-specified padding on a <button> is being ignored https://bugs.webkit.org/show_bug.cgi?id=295355 rdar://154889296

Reviewed by Aditya Keerthi.

Check if the author has explicitly set padding for native controls before applying
padding in RenderThemeCocoa.

Tested by button-author-level-padding-applies.html and
select-author-level-padding-applies.html.

* LayoutTests/imported/w3c/web-platform-tests/css/css-ui/button-author-level-padding-applies-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-ui/button-author-level-padding-applies.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-ui/select-author-level-padding-applies-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-ui/select-author-level-padding-applies.html: Added.
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac/TestExpectations:
* Source/WebCore/rendering/cocoa/RenderThemeCocoa.mm:
(WebCore::applyPaddingIfNotExplicitlySet):
(WebCore::RenderThemeCocoa::adjustColorWellSwatchWrapperStyleForVectorBasedControls const):
(WebCore::applyEmPadding):
(WebCore::applyEmPaddingForNumberField):
(WebCore::RenderThemeCocoa::adjustTextFieldStyleForVectorBasedControls const):
(WebCore::applyCommonButtonPaddingToStyleForVectorBasedControls):
(WebCore::adjustSelectListButtonStyleForVectorBasedControls):
(WebCore::adjustInputElementButtonStyleForVectorBasedControls):
(WebCore::RenderThemeCocoa::adjustButtonStyleForVectorBasedControls const):

Canonical link: https://commits.webkit.org/297013@main